Updated email to antonyfl@gmail.com

--- a/app/index.html
+++ b/app/index.html
@@ -411,7 +411,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h4 style="color: white; margin-top: 25px;">antonylin@gmail.com</h4>
+                    <h4 style="color: white; margin-top: 25px;">antonyfl@gmail.com</h4>
                     <h4 style="color: white">+1 (510)-362-9768</h4>
                 </div>
             </div>
