Updated some text

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Healthy by Choice, not by Chance</div>
+                <!-- <div class="intro-lead-in">Healthy by Choice, not by Chance</div> -->
+                <div class="intro-lead-in">Commitment to Excellence</div>
                 <div class="intro-heading">Antony Lin</div>
                 <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
@@ -236,13 +237,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
+                                    <h4>2009 - 2013</h4>
                                     <h4 class="subheading">Simon Fraser University</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -250,50 +251,67 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">A Doctor Is Born</h4>
+                                    <h4>2011 - 2013</h4>
+                                    <h4 class="subheading">Optimum Family Chiropractic</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Chiropractic Assistant - Tech</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2013 - Present</h4>
+                                    <h4 class="subheading">Life Chiropractic College West</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        Intern at Life Chiropractic College West Health Center
+                                        Chiropractic Student
                                     </p>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Long Live Gonstead</h4>
+                                    <h4>2014 - 2015</h4>
+                                    <h4 class="subheading">The Gonstead Club at Life West</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        Over 100 Certified Hours studying the Gonstead Technique
+                                        President of the Gonstead Club
                                     </p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Started a Gonstead Club</h4>
+                                    <h4>2016 - Present</h4>
+                                    <h4 class="subheading">Life Chiropractic College West Health Center </h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        Former President of the Gonstead Club at Life Chiropractic College West
+                                        Chiropractic Intern – Specializing in the Gonstead Technique 
+                                    </p>
+                                    <p class="text-muted">
+                                        Over 120 Certified Hours of studying the Gonstead Technique 
                                     </p>
                                 </div>
                             </div>
