--- a/app/index.html
+++ b/app/index.html
@@ -55,18 +55,18 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li> -->
+                    </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="#team">Gonstead</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -90,7 +90,7 @@
     </header>
 
     <!-- Services Section -->
-    <!-- <section id="services">
+    <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -125,10 +125,10 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Portfolio Grid Section -->
-    <!-- <section id="portfolio" class="bg-light-gray">
+    <section id="portfolio" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -140,15 +140,15 @@
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                            <div class="portfolio-hover-content" style="top: 20%; padding: 25px; text-align: left;">
+                                <h4>O.M.G like seriously as soon as Dr. Gonstead put his hands on my back, it was just amazing experience. I never thought that much liquid could spew from my under sides. It. Was. Gloriousss~~.</h4>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/_1.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>Candy Lee</h4>
+                        <p class="text-muted">Sex Demon</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -223,7 +223,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- About Section -->
     <section id="about">
@@ -330,58 +330,33 @@
     </section>
 
     <!-- Team Section -->
-    <!-- <section id="team" class="bg-light-gray">
+     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">About Gonstead</h2>
+                    <h3 class="section-subheading text-muted">Amazing Magician, Healer, Tank</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
+                        <h4>C.S Gonstead</h4>
+                        <p class="text-muted">The God</p>
+<!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                <div class="col-sm-8">
+                    <div class="col-lg-12 col-lg-offset-1">
+                        <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                     </div>
                 </div>
             </div>
@@ -392,10 +367,10 @@
             </div>
         </div>
     </section>
--->
+
 
     <!-- Clients Aside -->
-    <!--
+    
     <aside class="clients">
         <div class="container">
             <div class="row">
@@ -421,7 +396,7 @@
                 </div>
             </div>
         </div>
-    </aside> -->
+    </aside> 
 
     <!-- Contact Section -->
     <section id="contact">
